Tests:
* add test for stream open close
* add test for libcnotify_printf
* add test for libcnotify_print_data
* add test for libcnotify_print_error_backtrace

20160327
* worked on tests

20160105
* 2016 update

20151228
* updated dependencies

20150613
* code clean up

20150101
* 2015 update

20141229
* updated dpkg files

20141014
* changes for deployment

20141010
* worked on utility scripts

20140915
* changes for project site move

20140730
* updated dpkg files

20140505
* fixes to build static library with mingw and cygwin

20140105
* updated dependencies
* 2014 update

20130609
* fix in .pc.in file

20130509
* small changes

20130404
* updated dependencies

20130403
* updated dependencies

20130113
* updated msvscpp files

20130103
* changes to .gitignore
* 2013 update

20121224
* added .gitignore
* updated msvscpp files

20120919
* updated dependencies

20120904
* updated dependencies

20120625
* updated dependencies

20120507
* email and project site change
* updated man pages

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* Worked on stand-alone version
