@@ -24,6 +24,7 @@ cnotify_test_get_version_SOURCES = \
 	cnotify_test_libcerror.h \
 	cnotify_test_libcnotify.h \
 	cnotify_test_libcstring.h \
+	cnotify_test_macros.h \
 	cnotify_test_unused.h
 
 cnotify_test_get_version_LDADD = \
